Move use cases into Interactors
Add StartQuizInteractor and AnswerQuizInteractor to handle starting and answering quizzes (fetching words, building sessions, persisting sessions, scoring, and completing sessions). Refactor QuizService to focus on question construction and answer checking: expose buildQuestions/buildQuestion and add checkAnswer, remove previous Start/Answer/Get use case implementations and Spring/service wiring. Also adjust translations access from getFirst() to get(0) and make buildQuestion public. Overall this separates application use-case logic into interactors and keeps QuizService as a pure domain helper.